--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,5 @@
 /* To learn more about this file see: https://angular.io/config/tsconfig. */
+
 {
   "compileOnSave": false,
   "compilerOptions": {
@@ -14,16 +15,25 @@
     "experimentalDecorators": true,
     "moduleResolution": "node",
     "importHelpers": true,
-    "target": "es2015",
-    "module": "es2020",
+    "target": "es2018",
+    "module": "esnext",
     "lib": [
+      "es5", 
+      "es6",
       "es2018",
-      "dom"
+      "dom",
+      "dom.iterable"
     ]
+
   },
   "angularCompilerOptions": {
+    "types": ["node"],
     "strictInjectionParameters": true,
     "strictInputAccessModifiers": true,
     "strictTemplates": true
   }
+  
 }
+
+
+
