--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,8 +23,8 @@
       "es2018",
       "dom",
       "dom.iterable"
-    ]
-
+    ],
+    "strictPropertyInitialization": false
   },
   "angularCompilerOptions": {
     "types": ["node"],
