First unit test

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,7 +24,11 @@
       "dom",
       "dom.iterable"
     ],
-    "strictPropertyInitialization": false
+    "strictPropertyInitialization": false,
+    "types": [
+      "jest",
+      "node"
+    ]
   },
   "angularCompilerOptions": {
     "types": ["node"],
