--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "test": "ng test",
+    "test": "jest",
+    "test-watch": "jest --watch",
     "lint": "ng lint",
     "e2e": "ng e2e"
   },
@@ -21,6 +22,7 @@
     "@angular/platform-browser": "~11.0.6",
     "@angular/platform-browser-dynamic": "~11.0.6",
     "@angular/router": "~11.0.6",
+    "@testing-library/angular": "^10.4.1",
     "bootstrap": "^4.6.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
@@ -30,16 +32,13 @@
     "@angular-devkit/build-angular": "^0.1100.7",
     "@angular/cli": "~11.0.6",
     "@angular/compiler-cli": "~11.0.6",
-    "@types/jasmine": "~3.6.0",
+    "@angular-builders/jest": "^10.0.0",
+    "@testing-library/jest-dom": "^5.11.9",
+    "@types/jest": "^26.0.21",
     "@types/node": "^12.19.15",
     "codelyzer": "^6.0.0",
-    "jasmine-core": "~3.6.0",
-    "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~5.1.0",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage": "~2.0.3",
-    "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "^1.5.0",
+    "jest": "^26.6.3",
+    "jest-preset-angular": "^8.4.0",
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
